--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@
 version: 0.3.5 # NO TOCAR
 
 # HODL username
-# username: "USUARIO" # < TU_USUARIO@hodl.ar
+username: "walterccrs"
 
 # NOSTR Settings
 # nostr: # Sin el # adelante
